--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ body {
   
 li::marker{
     color: #246C94;
-    
+    margin-right: 24px;
     font-size: 28px;
     display: flex;
     align-items: center;
