update spanish translate bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,10 @@ li::marker{
     font-weight: 800;
     
 }
+
+#goog-gt-vt{
+    display: none;
+}
+.VIpgJd-ZVi9od-ORHb-OEVmcd{
+    display: none;
+}
